# interpolation_search

./: Cargo.toml  README.md  TODO
benches/: search.rs
src/: interpolation_factor.rs  interpolation_search.rs  lib.rs  linear.rs  scalable.rs
