[package]
name = "interpolation_search"
version = "1.1.0"
edition = "2021"
license = "GLWTPL"
description = "Interpolation search - binary search on steroids."
repository = "https://github.com/vgasparyan1995/interpolation_search"
keywords = ["interpolation", "search", "binary", "sorted", "algorithms"]
categories = ["algorithms", "data-structures"]

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.1"

[[bench]]
name = "search"
harness = false
